# 17th-TradeHub

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
Import_File_Test/: GoodsReceiptsData.csv  GoodsReceiptsData.xlsx  InventoryData.csv  InventoryData.xlsx  ProductsData.csv  ProductsData.xlsx  PurchaseOrdersData.csv  PurchaseOrdersData.xlsx  SalesOrdersData.csv  SalesOrdersData.xlsx  clientsData.csv  clientsData.xlsx  ordersData.csv  ordersData.xlsx  suppliersData.csv  suppliersData.xlsx
apps/client/: import_data.py  models.py  urls.py  views.py
apps/clients/: apps.py  models.py  urls.py  views.py
apps/company/: models.py  urls.py  views.py
apps/goods_receipts/: apps.py  models.py  urls.py  views.py
apps/inventory/: apps.py  models.py  signals.py  urls.py  views.py
apps/lib/: decorators.py
apps/orders/: models.py  urls.py  views.py
apps/pages/: urls.py  views.py
apps/products/: models.py  urls.py  views.py
apps/purchase_orders/: apps.py  models.py  tests.py  urls.py  views.py
apps/sales_orders/: apps.py  models.py  urls.py  views.py
apps/suppliers/: apps.py  models.py  urls.py  views.py
apps/users/: admin.py  apps.py  context_processors.py  decorators.py  models.py  signals.py  urls.py  views.py
core/: settings.py  urls.py
fake_data/: clients_data.json  company_data.json  inventory_data.json  products_data.json  suppliers_data.json
middleware/: middleware.py
static/: button.css  home.css  login.css  style.css
(+333 files in other folders)
