[tool.poetry]
name = "17th-TradeHub"
version = "0.1.0"
description = ""
authors = ["17th-TradeHub"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg = "^3.2.1"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pre-commit = "^3.8.0"
python-dotenv = "^1.0.1"
commitizen = "^3.29.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
