[tool.poetry]
name = "17th-TradeHub"
version = "0.1.0"
description = ""
authors = ["17th-TradeHub"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg = "^3.2.1"
django-fsm = "^3.0.0"
commitizen = "^3.29.0"
social-auth-app-django = "^5.4.2"
social-auth-app-django-mongoengine = "^1.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
pytz = "^2024.2"
django-htmx = "^1.19.0"
django-notifications-hq = "^1.8.3"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pre-commit = "^3.8.0"
python-dotenv = "^1.0.1"
commitizen = "^3.29.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88